--- a/style.css
+++ b/style.css
@@ -445,12 +445,19 @@ img#rss-feed {
 
 /* Content */
 
+#content-page {
+	text-align: left;
+	}
+
 #content-page,
 #content-archives,
 #content-post {
-	/*font-size: 1.2em;*/
-	text-align: center;
 	position: relative;
+	}
+
+#content-archives,
+#content-post {
+	text-align: center;
 	}
 	
 #content-archives {
@@ -474,6 +481,11 @@ img#rss-feed {
 #mosaic-list .archive-post, 	
 .narrowcolumn .post,
 .widecolumn .post {
+	color: rgb(255, 255, 255);
+	}
+
+#archive-list .archive-post, 	
+#mosaic-list .archive-post {
 	color: rgb(255, 255, 255);
 	text-align: center;
 	}
@@ -1453,9 +1465,7 @@ a img {
 	padding: 5px 0px;
 }
 
-.tooltip-title,
-.tooltip-title-prev,
-.tooltip-title-next {
+.tooltip-title {
 	background: black url(images/tip-header.png);
 	color: black;
 	opacity: 0.8;
@@ -1469,9 +1479,7 @@ a img {
 	font-family: 'Trebuchet MS', Geneva, Arial, Helvetica, sans-serif;
 	}
 
-.tooltip-text,
-.tooltip-text-prev,
-.tooltip-text-next {
+.tooltip-text {
 	background: dimgray url(images/grid.gif);
 	color: white;
 	opacity: 0.8;
@@ -1951,5 +1959,5 @@ div.year {
 
 
 #photo-frame canvas {
-	margin-top: 5px; /* <-- this is the offset of the reflected image to it's original */
+	margin-top: 0px; /* <-- this is the offset of the reflected image to it's original */
 }
